Fix: counsels dto 구조 일부 수정